// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Columns.* /> <Columns.Even /> should render correctly with all required props 1`] = `
<div
  className="Columns-root-0-1-1 Columns-even-0-1-2"
>
  <div
    className="column"
    key=".0"
  >
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`<Columns.* /> <Columns.OneSpanTwo /> should render correctly with all required props 1`] = `
<div
  className="Columns-root-0-1-1 Columns-one-span-two-0-1-3"
>
  <div
    className="column"
    key=".0"
  >
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`<Columns.* /> <Columns.SpanThreeSpanTwo /> should render correctly with all required props 1`] = `
<div
  className="Columns-root-0-1-1 Columns-span-three-span-two-0-1-5"
>
  <div
    className="column"
    key=".0"
  >
    <div
      className="content"
    />
  </div>
</div>
`;

exports[`<Columns.* /> <Columns.SpanTwoOne /> should render correctly with all required props 1`] = `
<div
  className="Columns-root-0-1-1 Columns-span-two-one-0-1-4"
>
  <div
    className="column"
    key=".0"
  >
    <div
      className="content"
    />
  </div>
</div>
`;
